# frost-go

./: .gitignore  README.md  main.py  performance_test.py  pyproject.toml  run.py
.github/workflows/: lint.yml  test.yml
config/: constants.py  database.py  env.py
crawler/: __init__.py  check_robot_txt.py  crawler.py
env/: .env.example
general/: constants.py
models/: crawled.py  queue.py
setup/: constants.py  setup.py
src/: constants.py  database.py  env.py  main.py  setup.py
src/config/: database.py  env.py
src/crawler/: check_robots_txt.py  constants.py  crawler.py  get_robots_txt_url.py
src/general/: __init__.py  constants.py  create_directory.py  create_file.py  get_domain.py  get_scheme.py  open_file.py  tokenize_string.py
src/models/: __init__.py  constants.py  crawled.py  failed_crawled.py  pause.py  queue.py
src/parser/: parser.py
tests/: __init__.py  test.py  tests.txt
tests/crawler/: __init__.py  test_check_robot_txt.py  test_get_robot_txt_url.py
tests/crawler/robot_txt/: allow_all_robots2.txt  allow_frost_robots.txt  allow_frost_robots2.txt  disallow_all_robots2.txt  disallow_frost_robots.txt  disallow_frost_robots2.txt  override_allow_robots.txt  override_allow_robots2.txt  override_allow_with_allow_robots.txt  override_allow_with_allow_robots2.txt  override_disallow_robots.txt  override_disallow_robots2.txt  override_disallow_with_disallow_robots.txt  (+1 more)
tests/general/: __init__.py  test_create_directory.py  test_create_file.py  test_get_domain.py  test_get_scheme.py  test_open_file.py  test_tokenize_string.py
tests/models/: __init__.py  test_crawled.py  test_failed_crawled.py  test_pause.py  test_queue.py
